@@ -6,7 +6,7 @@
 /*
     CrossFire, A Multiplayer game for X-windows
 
-    Copyright (C) 1994 Mark Wedel
+    Copyright (C) 2000 Mark Wedel
     Copyright (C) 1992 Frank Tore Johansen
 
     This program is free software; you can redistribute it and/or modify
@@ -23,7 +23,7 @@
     along with this program; if not, write to the Free Software
     Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 
-    The maintainer of this code can be reached at master@rahul.net
+    The maintainer of this code can be reached at mwedel@scruz.net
 */
 
 /* This file contains animation related code. */
@@ -139,6 +139,7 @@ void animate_object(object *op) {
     if(!op->animation_id || !NUM_ANIMATIONS(op)) {
 	LOG(llevError,"Object lacks animation.\n");
 	dump_object(op);
+	return;
     }
     ++op->state;    /* increase draw state */
 
